Added TravisCI support updated README

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "webinv/calendar",
   "description": "Calendar Library",
   "type": "library",
+  "license": "MIT",
   "authors": [
     {
       "name": "Krzysztof Kardasz",
